# FEST-3D

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  Rchannel-3D-revolved-2.txt  allocate_memory_implementation.inc  ausm.f90  bc_0.md  bc_1.md  bc_2.md  bc_3.md  bc_token_value_map_implementation.inc  bclist_declaration.inc  boundary_conditions.f90  check_interpolated_values.py  clearlogs.sh  compile.sh  config.md  config.md.sample  deallocate_memory_implementation.inc  face_interpolant.f90  files  fort_depend.py  geometry.f90  global.f90  grid.f90  grid_0.txt  grid_3.txt  hlle.f90  install.sh  layout.md  ldfss0.f90  main.f90  makefile  parallegmres.f90  parallel.f90  (+25 more)
src/: BLU_SGS.f90  CC.f90  CMakeLists.txt  DP_LUSGS.f90  HLU_SGS.f90  SGSR.f90  ausm.f90  bclist_declaration.inc  bclist_definition.inc  blending_function.f90  boundary_conditions.f90  boundary_state_reconstruction.f90  cell_grad.f90  compute_time_step.inc  convergence.f90  create_and_erase.f90  deallocate_memory_implementation.inc  debug.h  dissipation.f90  dump_solution.f90  error.h  error.inc  face_interpolant.f90  geometry.f90  get_p.inc  global.f90  global_sst.f90  global_vars.f90  gmres.f90  gradients.f90  grid.f90  hlle.f90  interface.f90  interface1.f90  layout.f90  ldfss0.f90  lusgs.f90  main.f90  mapping.f90  mpi.inc  (+41 more)
src/aux/: allocate_memory_implementation.inc  bitwise.f90  check_outout_control.f90  deallocate_memory_implementation.inc  fclose.f90  fopen.f90  start_finish.f90  str_case.f90  strcat_implementation.inc  string.f90  tostr_implementation.inc  utils.f90
src/boundary/: FT_bc.f90  bc.f90  bc_primitive.f90  bc_token_value_map_implementation.inc  bc_transport.f90  boundary_conditions.f90  boundary_state_reconstruction.f90  copy_bc.f90  ghost_gradient.f90  imin.inc  read_bc.f90
src/convergence/: convergence.f90  convergence_select.inc
src/face/flux/convective/: ausm.f90  ausmP.f90  ausmUP.f90  ausmUP2.f90  hllc.f90  ldfss0.f90  mass_flux.inc  newAUSM.f90  scheme.f90  slau.f90  van_leer.f90
src/face/flux/visocus/: kkl_turbulent_flux.f90  sst_turbulent_flux.f90  turbulent_flux.f90  turbulent_fluxes.f90  viscous.f90
src/face/state/: face_interpolant.f90  muscl.f90  ppm.f90  weno.f90  weno_NM.f90
src/global/: global.f90  global_kkl.f90  global_sa.f90  global_sst.f90  global_vars.f90  global_wilcox2006.f90
src/python_codes/: calculate_adiabatic_conditions.py  write_interface.py
src/python_codes/Grid-Related/: plotgrid.py  revolve2Dgrid.py  visit_plot_mesh.py
src/python_codes/Visit-Related/: visdaemon.py  visit_output_variables.md
src/read_write/: check_output_control.f90
src/read_write/read/: read.f90  read_multi_level_vtk.f90  read_output.f90  read_output_tec.f90  read_output_vtk.f90  read_output_vtk_ghost.f90
src/read_write/write/: dump_solution.f90  write_output.f90  write_output_tec.f90  write_output_tec_node.f90  write_output_tecplot.f90  write_output_vtk.f90  write_output_vtk_ghost.f90
src/resnorm/: mass_error.f90  resnorm.f90  resnorm2.f90  resnorm_write_cases.inc
src/resnorm/turbulent/: res_turbulent.f90
src/resnorm/viscous/: res_viscous.f90
src/source/: compute_gradT_y.inc  compute_gradv_x.inc  compute_gradv_y.inc  compute_gradw_x.inc  compute_gradw_y.inc  compute_gradw_z.inc  evaluate_grad.f90  kkl_source.f90  source.f90  sst_grad.f90  sst_source.f90  summon_grad_evaluation.f90  turbulent_source.f90
src/state/: gradients.f90  kkl_gradients.f90  laminar_gradients.f90  lctm2015_gradients.f90  sa_gradients.f90  sst_gradients.f90  state.f90
src/transport/: README.md
src/transport/viscosity/molecular/: molecular_viscosity.f90
src/transport/viscosity/turbulent/: kkl_viscosity.f90  sst_viscosity.f90  turbulent_viscosity.f90
src/turbulence_models/: state_variables_deceleration.inc  turbulence_variable_from_state.inc
src/turbulence_models/include/ausm/: import_module.inc
src/turbulence_models/include/bc/: fix_and_copy_turb_var.inc  import_module.inc
src/turbulence_models/include/ldfss0/: Fcompute_flux.inc  compute_flux_select.inc  compute_flux_var.inc  import_module.inc
src/turbulence_models/include/parallel/: recv_imax.inc  recv_imin.inc  recv_jmax.inc  recv_jmin.inc  recv_kmax.inc  recv_kmin.inc  send_imax.inc  send_imin.inc  send_jmax.inc  send_jmin.inc  send_kmax.inc  send_kmin.inc
src/turbulence_models/include/scheme/: deallocate_memory.inc  import_module.inc
src/turbulence_models/include/solver/: RK4_update_solution.inc  get_residue_primitive.inc  link_aliases_solver.inc  unlink_aliases_solver.inc  update_solution.inc  variables_deceleration.inc
src/turbulence_models/include/source/: compute.inc  destroy_source.inc  gradient_find.inc  setup_source.inc
src/turbulence_models/include/state/: writestate_vtk.inc
src/turbulence_models/include/transport/: Ftransport_find.inc  Gtransport_find.inc  Gtransport_init.inc  destroy_memory.inc  import_module.inc
src/turbulence_models/kkl/parallel/: recv_imax.inc  recv_jmin.inc
src/turbulence_models/kkl/solver/: get_residue_primitive.inc  link_aliases_solver.inc  unlink_aliases_solver.inc  update_solution.inc
src/turbulence_models/kkl/source/: destroy_source.inc  import_module.inc  variable_deceleration.inc
src/turbulence_models/kkl/transport/: Ftransport_find.inc  destroy_memory.inc  gradient_init.inc  variables_deceleration.inc
src/turbulence_models/sst/ausm/: Fcompute_flux.inc  compute_flux_var.inc
src/turbulence_models/sst/bc/: apply_boundary_condition_imax.inc  apply_boundary_condition_imin.inc  apply_boundary_condition_jmax.inc  apply_boundary_condition_jmin.inc  apply_boundary_condition_kmax.inc  apply_boundary_condition_kmin.inc  fix_and_copy_turb_var.inc  flow_tangency.inc  import_module.inc  (+1 more)
src/wall/: wall.f90  wall_dist.f90
(+553 files in other folders)
